# datalackey

./: CMakeLists.txt  README.md  compare-output  nap  oneline-keysort-json  oneline-prettify-json  oneline_keysort_json  repeat.sh  replace-pid
datalackey/: Command.cpp  Command.hpp  CommandDescription.cpp  CommandDescription.hpp  CommandDescriptions.cpp  CommandDescriptions.hpp  CommandHandler.cpp  CommandHandler.hpp  CommandHandlerJSON.cpp  CommandHandlerJSON.hpp  CommandReporter.cpp  CommandReporter.hpp  Converter.cpp  Converter.hpp  DataGroup.cpp  DataGroup.hpp  DataOwner.cpp  DataOwner.hpp  DataReader.cpp  DataReader.hpp  DeleteCommand.cpp  DeleteCommand.hpp  DirectoryStorage.cpp  DirectoryStorage.hpp  Encoder.cpp  Encoder.hpp  EndFeedCommand.cpp  EndFeedCommand.hpp  Factories.cpp  Factories.hpp  FeedCommand.cpp  FeedCommand.hpp  File.cpp  File.hpp  FileDescriptorInput.cpp  FileDescriptorInput.hpp  FileDescriptorOutput.cpp  FileDescriptorOutput.hpp  FileLister.cpp  FileLister.hpp  (+149 more)
datalackey.xcodeproj/: project.pbxproj
datalackey/tests/: ctrl_notify_data.sh  exit.sh  feed_end.sh  output.sh  output_etc.sh  processes.sh  rename.sh  signal.sh  stderr_raw_stdout.sh  terminate.sh  test_FileLister.cpp  test_FileLister.sh  test_MessagePassThrough.cpp  test_bad_label_output.sh  test_command.cpp  test_ctrl_notify_data.sh  test_ctrl_notify_none.sh  test_exit.sh  test_noop.sh  test_null_terminate.sh  test_output.sh  test_output_etc.sh  test_process.cpp  test_processes.sh  test_raw.sh  test_set_delete.sh  test_signal.sh  test_stderr_raw_stderr.sh  test_stderr_raw_stdout.sh  test_terminate.sh  test_version.sh  test_wait.sh
datalackey/tests/directory/: bad_dir.sh  ctrl_notify_none.sh  feed_end.sh  output.sh  output_etc.sh  relative_dir.sh  rename.sh  set_delete.sh  set_reload.sh
datalackey/tests/error/: error.sh  feed.sh  missing_or_unexpected.sh  run.sh
datalackey/tests/memory/: abs-change-directory.sh  bad-change-directory.sh  bad-program.sh  bad_label_output.sh  change-directory.sh  ctrl_notify_data.sh  ctrl_notify_none.sh  exit.sh  feed_end.sh  input_eof.sh  noop.sh  notify_data_child.sh  notify_data_err.sh  null_process_id.sh  null_terminate.sh  output.sh  output_etc.sh  processes.sh  raw.sh  rename.sh  report.sh  set_delete.sh  set_multiple.sh  signal.sh  stderr_raw_stderr.sh  stderr_raw_stdout.sh  stop.sh  terminate.sh  version.sh  version_repeat.sh
src/: Command.hpp  CommandDescription.cpp  CommandDescription.hpp  CommandDescriptions.cpp  CommandDescriptions.hpp  CommandHandler.cpp  CommandHandler.hpp  CommandHandlerJSON.cpp  DataGroup.cpp  DataGroup.hpp  DataOwner.hpp  DataReader.cpp  DataReader.hpp  DirectoryStorage.cpp  DirectoryStorage.hpp  Encoder.cpp  Encoder.hpp  EndFeedCommand.cpp  EndFeedCommand.hpp  Factories.cpp  FeedCommand.hpp  File.cpp  FileDescriptor.cpp  FileDescriptor.hpp  FileDescriptorInput.cpp  FileDescriptorInput.hpp  FileDescriptorOutput.cpp  FileDescriptorOutput.hpp  FileOwner.cpp  FileOwner.hpp  FileReader.cpp  FileReader.hpp  GetCommand.cpp  GetCommand.hpp  InputChannel.hpp  InputScanner.cpp  InputScannerDiscard.cpp  InputScannerDiscard.hpp  InputScannerJSON.cpp  InputScannerJSON.hpp  (+59 more)
test/: cloudbuild.sh  cloudbuild.yaml
test/directory/: bad_dir.sh  ctrl_notify_none.sh  feed_end.sh  output.sh  output_etc.sh  relative_dir.sh  rename.sh  set_delete.sh  set_reload.sh
test/error/: error.sh  run.sh
test/memory/: abs-change-directory.sh  bad-change-directory.sh  bad-program.sh  ctrl_notify_data.sh  feed_end.sh  input_eof.sh  notify_data_child.sh  notify_data_err.sh  null_process_id.sh  output.sh  output_etc.sh  raw.sh  rename.sh  report.sh  set_delete.sh  set_multiple.sh  signal.sh  stderr_raw_stderr.sh  stderr_raw_stdout.sh  terminate.sh  version.sh  version_repeat.sh
test/port/: Linux.sh  amzn.sh  centos.sh  clang-build.sh  debian.sh  gcc-build.sh  rhel.sh  sles.sh  ubuntu.sh
test/stress/: ndarray.cpp  overwrite.sh
tests/directory/: bad_dir.sh  ctrl_notify_none.sh  output.sh  relative_dir.sh  rename.sh
tests/error/: error.sh  feed.sh  missing_or_unexpected.sh  run.sh
tests/memory/: abs-change-directory.sh  bad-change-directory.sh  bad-program.sh  bad_label_output.sh  change-directory.sh  ctrl_notify_data.sh  ctrl_notify_none.sh  exit.sh  feed_end.sh  input_eof.sh  noop.sh  notify_data_child.sh  notify_data_err.sh  output.sh  output_etc.sh  processes.sh  report.sh  set_delete.sh  set_multiple.sh  signal.sh  stop.sh  version.sh
tests/stress/: overwrite.sh  parallel_overwrite.sh
