cmake_minimum_required(VERSION 3.5)
project(datalackey CXX)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

include_directories( /usr/local/include/ )
include_directories( datalackey )
link_directories( /usr/local/lib/ )
#link_libraries( boost_system boost_filesystem )

enable_testing()

set(Sources datalackey/SimpleValue.cpp)
list(APPEND Sources datalackey/StringValue.cpp)
list(APPEND Sources datalackey/NumberValue.cpp)
list(APPEND Sources datalackey/NullValue.cpp)
list(APPEND Sources datalackey/Time.cpp)
list(APPEND Sources datalackey/File.cpp)
list(APPEND Sources datalackey/RawData.cpp)
list(APPEND Sources datalackey/DataReader.cpp)
list(APPEND Sources datalackey/DataOwner.cpp)
list(APPEND Sources datalackey/MemoryReader.cpp)
list(APPEND Sources datalackey/RawDataOwner.cpp)
list(APPEND Sources datalackey/MemoryOwner.cpp)
list(APPEND Sources datalackey/FileOwner.cpp)
list(APPEND Sources datalackey/FileReader.cpp)
list(APPEND Sources datalackey/DataGroup.cpp)
list(APPEND Sources datalackey/Storage.cpp)
list(APPEND Sources datalackey/MemoryStorage.cpp)
list(APPEND Sources datalackey/DirectoryStorage.cpp)
list(APPEND Sources datalackey/StorageDataSink.cpp)
list(APPEND Sources datalackey/StorageDataSinkJSON.cpp)

list(APPEND Sources datalackey/Literal.cpp)
list(APPEND Sources datalackey/ValueReference.cpp)
list(APPEND Sources datalackey/Encoder.cpp)
list(APPEND Sources datalackey/NullEncoder.cpp)
list(APPEND Sources datalackey/OutputChannel.cpp)
list(APPEND Sources datalackey/NullOutput.cpp)
list(APPEND Sources datalackey/OutputItem.cpp)
list(APPEND Sources datalackey/Output.cpp)
list(APPEND Sources datalackey/Notifications.cpp)
list(APPEND Sources datalackey/FileDescriptorOutput.cpp)
list(APPEND Sources datalackey/MessageHandler.cpp)
list(APPEND Sources datalackey/StorageDataSink.cpp)
list(APPEND Sources datalackey/InputChannel.cpp)
list(APPEND Sources datalackey/InputScanner.cpp)
list(APPEND Sources datalackey/InputScannerRawMessage.cpp)
list(APPEND Sources datalackey/InputScannerDiscard.cpp)
list(APPEND Sources datalackey/FileDescriptorInput.cpp)
list(APPEND Sources datalackey/StringValueMapper.cpp)
list(APPEND Sources datalackey/StringValueMapperSimple.cpp)

list(APPEND Sources datalackey/JSONEncoder.cpp)
list(APPEND Sources datalackey/StorageDataSinkJSON.cpp)
list(APPEND Sources datalackey/InputScannerJSON.cpp)
list(APPEND Sources datalackey/MessageRawJSON.cpp)

list(APPEND Sources datalackey/Command.cpp)
list(APPEND Sources datalackey/CommandHandler.cpp)
list(APPEND Sources datalackey/ListCommand.cpp)
list(APPEND Sources datalackey/StorageInfoCommand.cpp)
list(APPEND Sources datalackey/GetCommand.cpp)
list(APPEND Sources datalackey/DeleteCommand.cpp)
list(APPEND Sources datalackey/RenameCommand.cpp)
list(APPEND Sources datalackey/VersionCommand.cpp)
list(APPEND Sources datalackey/NoOperationCommand.cpp)

list(APPEND Sources datalackey/ProcessInput.cpp)
list(APPEND Sources datalackey/Process.cpp)
list(APPEND Sources datalackey/Processes.cpp)
list(APPEND Sources datalackey/LocalProcess.cpp)
list(APPEND Sources datalackey/CommandHandlerJSON.cpp)
list(APPEND Sources datalackey/Factories.cpp)
list(APPEND Sources datalackey/LocalProcesses.cpp)
list(APPEND Sources datalackey/ProcessesCommand.cpp)
list(APPEND Sources datalackey/RunCommand.cpp)
list(APPEND Sources datalackey/FeedCommand.cpp)
list(APPEND Sources datalackey/EndFeedCommand.cpp)
list(APPEND Sources datalackey/TerminateCommand.cpp)

list(APPEND Sources datalackey/Options.cpp)
list(APPEND Sources datalackey/datalackey.cpp)

add_executable( datalackey ${Sources} )

#
# Tests.
#

# Exit code tests.
#
add_executable(exit.sh IMPORTED)
set_property(TARGET exit.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/exit.sh)
add_test(NAME exit0 COMMAND exit.sh 0 $<TARGET_FILE:datalackey> )
add_test(NAME exit9 COMMAND exit.sh 9 $<TARGET_FILE:datalackey> )

# Signal tests.
#
add_executable(signal.sh IMPORTED)
set_property(TARGET signal.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/signal.sh)
add_test(NAME signal6 COMMAND signal.sh 6 $<TARGET_FILE:datalackey> )
add_test(NAME signal9 COMMAND signal.sh 9 $<TARGET_FILE:datalackey> )

# Simple commands
#
add_executable(noop.sh IMPORTED)
set_property(TARGET noop.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/noop.sh)
add_test(NAME noop COMMAND noop.sh $<TARGET_FILE:datalackey> )
add_executable(version.sh IMPORTED)
set_property(TARGET version.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/version.sh)
add_test(NAME version COMMAND version.sh ${CMAKE_CURRENT_LIST_DIR}/datalackey/Version.hpp $<TARGET_FILE:datalackey> )

# Processes
#
add_executable(processes.sh IMPORTED)
set_property(TARGET processes.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/processes.sh)
add_test(NAME processes COMMAND processes.sh $<TARGET_FILE:datalackey> )
add_executable(terminate.sh IMPORTED)
set_property(TARGET terminate.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/terminate.sh)
add_test(NAME terminate COMMAND terminate.sh $<TARGET_FILE:datalackey> )
add_executable(notify_data_err.sh IMPORTED)
set_property(TARGET notify_data_err.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/notify_data_err.sh)
add_test(NAME notify_data_err COMMAND notify_data_err.sh $<TARGET_FILE:datalackey> )
add_executable(change-directory.sh IMPORTED)
set_property(TARGET change-directory.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/change-directory.sh)
add_test(NAME change-directory COMMAND change-directory.sh $<TARGET_FILE:datalackey> )
add_executable(abs-change-directory.sh IMPORTED)
set_property(TARGET abs-change-directory.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/abs-change-directory.sh)
add_test(NAME abs-change-directory COMMAND abs-change-directory.sh $<TARGET_FILE:datalackey> )
add_executable(bad-change-directory.sh IMPORTED)
set_property(TARGET bad-change-directory.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/bad-change-directory.sh)
add_test(NAME bad-change-directory COMMAND bad-change-directory.sh $<TARGET_FILE:datalackey> )
add_executable(bad-program.sh IMPORTED)
set_property(TARGET bad-program.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/bad-program.sh)
add_test(NAME bad-program COMMAND bad-program.sh $<TARGET_FILE:datalackey> )

# Data handling
#
add_executable(set_delete.sh IMPORTED)
set_property(TARGET set_delete.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/set_delete.sh)
add_test(NAME set_delete COMMAND set_delete.sh $<TARGET_FILE:datalackey> )
add_executable(rename.sh IMPORTED)
set_property(TARGET rename.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/rename.sh)
add_test(NAME rename COMMAND rename.sh $<TARGET_FILE:datalackey> )

# Message output from process tests.
#
add_executable(raw.sh IMPORTED)
set_property(TARGET raw.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/raw.sh)
add_test(NAME raw_abc COMMAND raw.sh $<TARGET_FILE:datalackey> )
add_executable(stderr_raw_stdout.sh IMPORTED)
set_property(TARGET stderr_raw_stdout.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/stderr_raw_stdout.sh)
add_test(NAME raw_stderr_abc COMMAND stderr_raw_stdout.sh $<TARGET_FILE:datalackey> )
add_executable(stderr_raw_stderr.sh IMPORTED)
set_property(TARGET stderr_raw_stderr.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/stderr_raw_stderr.sh)
add_test(NAME raw_stderr2_abc COMMAND stderr_raw_stderr.sh $<TARGET_FILE:datalackey> )
add_executable(output.sh IMPORTED)
set_property(TARGET output.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/output.sh)
add_test(NAME output_get COMMAND output.sh $<TARGET_FILE:datalackey> )
add_executable(output_etc.sh IMPORTED)
set_property(TARGET output_etc.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/output_etc.sh)
add_test(NAME output_etc COMMAND output_etc.sh $<TARGET_FILE:datalackey> )
add_executable(null_terminate.sh IMPORTED)
set_property(TARGET null_terminate.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/null_terminate.sh)
add_test(NAME null_terminate COMMAND null_terminate.sh $<TARGET_FILE:datalackey> )
add_executable(feed_end.sh IMPORTED)
set_property(TARGET feed_end.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/feed_end.sh)
add_test(NAME feed_end COMMAND feed_end.sh $<TARGET_FILE:datalackey> )

# Bad label output
#
add_executable(bad_label_output.sh IMPORTED)
set_property(TARGET bad_label_output.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/bad_label_output.sh)
add_test(NAME label_null COMMAND bad_label_output.sh null $<TARGET_FILE:datalackey> )
add_test(NAME label_number COMMAND bad_label_output.sh 4 $<TARGET_FILE:datalackey> )
add_test(NAME label_chars COMMAND bad_label_output.sh bad $<TARGET_FILE:datalackey> )
add_test(NAME label_array COMMAND bad_label_output.sh '[\ 4\ ]' $<TARGET_FILE:datalackey> )
add_test(NAME label_object COMMAND bad_label_output.sh '{\ "a":\ 4\ }' $<TARGET_FILE:datalackey> )

# Controller runs a program
#
add_executable(ctrl_notify_none.sh IMPORTED)
set_property(TARGET ctrl_notify_none.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/ctrl_notify_none.sh)
add_test(NAME ctrl_notify_none COMMAND ctrl_notify_none.sh $<TARGET_FILE:datalackey> )
add_executable(ctrl_notify_data.sh IMPORTED)
set_property(TARGET ctrl_notify_data.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/memory/ctrl_notify_data.sh)
add_test(NAME ctrl_notify_data COMMAND ctrl_notify_data.sh $<TARGET_FILE:datalackey> )

# Directory storage tests
#
add_executable(d_output.sh IMPORTED)
set_property(TARGET d_output.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/directory/output.sh)
add_test(NAME d_output_get COMMAND d_output.sh $<TARGET_FILE:datalackey> )
add_executable(d_output_etc.sh IMPORTED)
set_property(TARGET d_output_etc.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/directory/output_etc.sh)
add_test(NAME d_output_etc COMMAND d_output_etc.sh $<TARGET_FILE:datalackey> )
add_executable(d_rename.sh IMPORTED)
set_property(TARGET d_rename.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/directory/rename.sh)
add_test(NAME d_rename COMMAND d_rename.sh $<TARGET_FILE:datalackey> )
add_executable(d_set_delete.sh IMPORTED)
set_property(TARGET d_set_delete.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/directory/set_delete.sh)
add_test(NAME d_set_delete COMMAND d_set_delete.sh $<TARGET_FILE:datalackey> )
add_executable(d_feed_end.sh IMPORTED)
set_property(TARGET d_feed_end.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/directory/feed_end.sh)
add_test(NAME d_feed_end COMMAND d_feed_end.sh $<TARGET_FILE:datalackey> )
add_executable(d_ctrl_notify_none.sh IMPORTED)
set_property(TARGET d_ctrl_notify_none.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/directory/ctrl_notify_none.sh)
add_test(NAME d_ctrl_notify_none COMMAND d_ctrl_notify_none.sh $<TARGET_FILE:datalackey> )
add_executable(d_relative_dir.sh IMPORTED)
set_property(TARGET d_relative_dir.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/directory/relative_dir.sh)
add_test(NAME d_relative_dir COMMAND d_relative_dir.sh $<TARGET_FILE:datalackey> )
add_executable(d_bad_dir.sh IMPORTED)
set_property(TARGET d_bad_dir.sh PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/datalackey/tests/directory/bad_dir.sh)
add_test(NAME d_bad_dir COMMAND d_bad_dir.sh $<TARGET_FILE:datalackey> )
